[package]
name = "mini_drive"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "cors"] } 
serde = { version = "1.0", features = ["derive"] } # NEW
serde_json = "1.0"
